<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.main.profile.ProfileFragment">
    <!-- fragment_profile.xml -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                android:contentDescription="user_image"
                android:scaleType="centerCrop"
                android:layout_marginTop="24dp"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginBottom="34dp"/>

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:background="@drawable/tortburchak_background_shape"
                android:hint="Username"
                android:layout_marginBottom="16dp"

                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Email"
                android:paddingLeft="8dp"
                android:background="@drawable/tortburchak_background_shape"

                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"
                android:enabled="false"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:background="@drawable/tortburchak_background_shape"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Phone Number"
                android:paddingLeft="8dp"
                android:background="@drawable/tortburchak_background_shape"

                android:inputType="phone"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="8dp"
                android:background="@drawable/tortburchak_background_shape"

                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="16dp"/>


            <!--<Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/rounded_login_btn"
                android:fontFamily="@font/inter_semibold"
                android:text="Save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/purple_500"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:visibility="gone"
                    app:backgroundTint="@color/purple_500"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"/>
                <Button
                    android:id="@+id/editButton"
                    android:layout_marginEnd="5dp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="34dp"
                    android:background="@drawable/rounded_login_btn"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:backgroundTint="@color/purple_500"/>


            </LinearLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_login_btn"
                android:fontFamily="@font/inter_semibold"
                android:text="Log out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/purple_500"/>
        </LinearLayout>
    </ScrollView>



</FrameLayout>